LBT-7047 fix tests compilation